--- a/views/shop.html
+++ b/views/shop.html
@@ -36,6 +36,7 @@
             </div>
             <div class="col-md-9">
                 <h3>{{ property.name }}</h3>
+                <div class="small">Propietario: {{ property.owner }} </div>
                 <h4>Precio: {{ property.price }} €</h4>
             </div>
         </a></div>
