--- a/views/user_login.html
+++ b/views/user_login.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %} 
 
-{% block titulo %} Registrar usuario {% endblock %} 
+{% block titulo %} Identificar usuario {% endblock %} 
 
 {% block contenido_principal %}
-  <h2>Registrar usuario</h2>
-  <form class="form-horizontal" method="post" action="/usuario" >
+  <h2>Identificación de usuario</h2>
+  <form class="form-horizontal" method="post" action="/login" >
     <div class="form-group">
       <label class="control-label col-sm-2" for="email">Email:</label>
       <div class="col-sm-10">
@@ -21,7 +21,7 @@
     </div>
     <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-primary">Registrar</button>
+        <button type="submit" class="btn btn-primary">Aceptar</button>
       </div>
     </div>
   </form>
