--- a/views/user_signin.html
+++ b/views/user_signin.html
@@ -1,10 +1,22 @@
 {% extends "base.html" %} 
 
-{% block titulo %} Identificar usuario {% endblock %} 
+{% block titulo %} Registrar usuario {% endblock %} 
 
 {% block contenido_principal %}
-  <h2>Identificación de usuario</h2>
-  <form class="form-horizontal" method="post" action="/identificarse" >
+  <h2>Registrar usuario</h2>
+  <form class="form-horizontal" method="post" action="/user" >
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="name">Nombre:</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" name="name" placeholder="Nombre del Usuario" required="true"/>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="surname">Apellidos:</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" name="surname" placeholder="Apellidos del Usuario" required="true"/>
+      </div>
+    </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="email">Email:</label>
       <div class="col-sm-10">
@@ -21,7 +33,7 @@
     </div>
     <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-primary">Aceptar</button>
+        <button type="submit" class="btn btn-primary">Registrar</button>
       </div>
     </div>
   </form>
