--- a/views/base.html
+++ b/views/base.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.css"/>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/styles/css/all.css"/>
+    <link rel="stylesheet" href="/styles/css/style.css">
 </head>
 <body>
 
@@ -21,7 +21,7 @@
                 <li class="nav-item active" id="mTienda">
                     <a class="nav-link" href="/properties">Tienda</a>
                 </li>
-                {% if user != null %}
+                {% if user.permission == 'A' %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" >Publicaciones</a>
                     <div class="dropdown-menu">
@@ -29,6 +29,14 @@
                         <a class="dropdown-item" href="/myproperties">Mis Propiedades</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                </li>
+                {% endif %}
+                {% if user.permission == 'B' %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" >Propiedades</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="/properties/saved">Propiedades Guardadas</a>
                     </div>
                 </li>
                 {% endif %}
@@ -43,8 +51,11 @@
                 </li>
                 {% endif %}
                 {% if user != null %}
-                <li class="nav-item active">
-                    <a class="nav-link" href="/accountInfo"><span class="fas fa-user"></span> {{user}}</a>
+                <li class="nav-item dropdown active">
+                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" ><span class="fas fa-user"></span>{{user.email}}</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="/user/edit/{{user._id}}">Cambiar Contraseña</a>
+                    </div>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/disconnect"><span class="fas fa-sign-out-alt"></span> Cerrar Sesión</a>
