Cambio en eliminar y editar perfil. Aumentada la seguridad

--- a/views/base.html
+++ b/views/base.html
@@ -112,8 +112,8 @@
             <li class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown"><span class="fas fa-user"></span>{{user.email}}</a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/user/edit/{{user._id}}">Editar Perfil</a>
-                    <a class="dropdown-item" href="/user/delete">Eliminar Perfil</a>
+                    <a class="dropdown-item" href="/user/edit">Editar Perfil</a>
+                    <a class="dropdown-item" data-toggle="modal" data-target="#modeloEliminarPerfil">Eliminar Perfil</a>
                 </div>
             </li>
             <li class="nav-item active">
@@ -123,6 +123,38 @@
         </ul>
     </div>
 </nav>
+
+<!-- Pantalla de asegurar que quiere borrar el perfil  -->
+<div class="modal fade" id="modeloEliminarPerfil">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form class="form-horizontal" method="post" action="/user/delete">
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">Introduzca su contraseña de nuevo</h4>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label class="control-label" for="password">Perderá toda la información almacenada en
+                            ella.</label>
+                        <div class="col-sm-10">
+                            <input type="password" class="form-control" name="password"
+                                   placeholder="Contraseña" required="true"/>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-danger">Eliminar Cuenta</button>
+                    <button type="button" class="btn btn-dark" data-dismiss="modal">Cancelar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
 
 <div class="container">
