--- a/views/user_modify.html
+++ b/views/user_modify.html
@@ -4,7 +4,7 @@
 
 {% block contenido_principal %}
 <h2>Modificar Contraseña</h2>
-<form class="form-horizontal" method="post" action="/user/edit/{{ user._id }}" encType="multipart/form-data">
+<form class="form-horizontal" method="post" action="/user/edit" encType="multipart/form-data">
     <div class="form-group">
         <label class="control-label col-sm-2" for="name">Nombre:</label>
         <div class="col-sm-10">
