--- a/views/base.html
+++ b/views/base.html
@@ -77,11 +77,11 @@
     <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active" id="mTienda">
-                <a class="nav-link" href="/properties">Tienda</a>
+                <a class="nav-link" href="/properties">Inicio</a>
             </li>
             {% if user.permission == 'A' %}
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Publicaciones</a>
+                <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Propiedades</a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="/properties/add">Añadir Propiedad</a>
                     <a class="dropdown-item" href="/myproperties">Mis Propiedades</a>
