--- a/views/user_login.html
+++ b/views/user_login.html
@@ -24,7 +24,7 @@
     </div>
     <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-primary">Aceptar</button>
+        <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
       </div>
     </div>
   </form>
