--- a/views/user_signin.html
+++ b/views/user_signin.html
@@ -43,7 +43,7 @@
     </div>
     <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-primary">Registrar</button>
+        <button type="submit" class="btn btn-primary">Registrarme</button>
       </div>
     </div>
   </form>
