--- a/views/base.html
+++ b/views/base.html
@@ -71,7 +71,7 @@
 
 <!-- Barra de Navegación superior -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/properties">
         <img class="imgLogo" src="/img/logo.png" alt="logo"/>
     </a>
     <div class="collapse navbar-collapse" id="myNavbar">
