--- a/views/user_login.html
+++ b/views/user_login.html
@@ -3,7 +3,7 @@
 {% block titulo %} Identificar usuario {% endblock %} 
 
 {% block contenido_principal %}
-  <h2>Identificación de usuario</h2>
+  <h2 class="sectionHeader">Identificación de usuario</h2>
   <form class="form-horizontal" method="post" action="/login" >
     <div class="form-group">
       <label class="control-label col-sm-2" for="email">Email:</label>
