--- a/views/user_modify.html
+++ b/views/user_modify.html
@@ -3,7 +3,7 @@
 {% block titulo %} Modificar Contraseña{% endblock %}
 
 {% block contenido_principal %}
-<h2>Modificar Contraseña</h2>
+<h2 class="sectionHeader">Modificar Contraseña</h2>
 <form class="form-horizontal" method="post" action="/user/edit" encType="multipart/form-data">
     <div class="form-group">
         <label class="control-label col-sm-2" for="name">Nombre:</label>
