--- a/views/user_passwordRecover.html
+++ b/views/user_passwordRecover.html
@@ -3,7 +3,7 @@
 {% block titulo %} Recuperar Contraseña{% endblock %}
 
 {% block contenido_principal %}
-<h2>Recuperar Contraseña</h2>
+<h2 class="sectionHeader">Recuperar Contraseña</h2>
 <form class="form-horizontal" method="post" action="/recover/{{passwordRecover}}" encType="multipart/form-data">
     <div class="form-group">
         <label class="control-label col-sm-2" for="password">Nueva Contraseña:</label>
