--- a/views/user_signin.html
+++ b/views/user_signin.html
@@ -3,7 +3,7 @@
 {% block titulo %} Registrar usuario {% endblock %} 
 
 {% block contenido_principal %}
-  <h2>Registrar usuario</h2>
+  <h2 class="sectionHeader">Registrar usuario</h2>
   <form class="form-horizontal" method="post" action="/user" >
     <div class="form-group">
       <label class="control-label col-sm-2" for="permission">Tipo:</label>
